--- a/index_todoapp.html
+++ b/index_todoapp.html
@@ -30,8 +30,15 @@
             //Funcion reducer
             function reducer (state, action) {
 
+                var nuevoEstado = Object.assign({}, state)
+
                 if (action.type == 'AGR') {
-                    return state;
+                    nuevoEstado.lista.push({
+                        id: action.id,
+                        li: "<li>"+ action.tarea +"</li>"
+                    });
+                    console.log(nuevoEstado);
+                    return nuevoEstado;
                 }
 
                 return state;
@@ -51,14 +58,29 @@
                 }
             }
 
+            var id = 1;
+
             var agregarTarea = function (evento) {
                 if (evento.keyCode === 13){
-                    console.log(evento);
-                    console.log(evento.target.value);
+                    //console.log(evento);
+                    //console.log(evento.target.value);
                     evento.target.value = "";
-                    store.dispatch(actionAgregar(tarea, id));
+                    store.dispatch(actionAgregar(evento.target.value, id));
+                    id += 1;
                 }
             }
+
+            var mostrarTareas = function(){
+                var listaD = document.getElementById('listaDesordenada');
+                var elementos = store.getState().lista;
+                var mostrarElementos = elementos.map(function(elemento){
+                    return elemento.li;
+                })
+                listaD.innerHTML = mostrarElementos;
+            }
+
+            //mostrar los elementos cada que hay una modificacion en el state de la STORE
+            store.subscribe(mostrarTareas);
 
         </script>
     </body>
